--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ResetPasswordConfirmation.cshtml
@@ -8,7 +8,7 @@
 		<div class="row">
 
 			<div class="info_msg">
-	@Model.Message. &nbsp; Click here to @Html.ActionLink("Login", "Login", "Account", new { area = "" }, new { @style = "color:red;" }) to your Account
+				@Model.Message. &nbsp; Click here to @Html.ActionLink("Login", "Login", "Account", new { area = "" }, new { @style = "color:red;" }) &nbsp; to your Account
 			</div>
 		</div>
 	</div>
