--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangePassword.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangePassword.cshtml
@@ -12,7 +12,7 @@
 		@Html.AntiForgeryToken()
 		<h5 class="modal-title">Change Password</h5>
 		<p>
-			<span class="red-txt">*</span> denotes a required field
+			<span class="red-txt">*</span> Denotes a required field
 		</p>
 		<div class="row">
 			@Html.HiddenFor(m => m.Email, new { id = "passwordEmail" })
@@ -52,10 +52,13 @@
             var target = $(param);
             if (value) return value != target.val();
             else return this.optional(element);
-        }, "can't match with Old Password!");
+        }, "Can't match with Old Password!");
     });
 
-    function OnSuccessChangePassword(response) {
+	function OnSuccessChangePassword(response) {
+		toastr.options = {
+			positionClass: 'toast-top-center'
+		};
         if (typeof (response.Message) !== 'undefined') {
             if (response.IsSuccess) {
                 toastr.success(response.Message, { timeOut: 3000 });
