--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_LayoutForProgramEventRegistration.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_LayoutForProgramEventRegistration.cshtml
@@ -18,10 +18,10 @@
 					<option>Our Other Sites</option>
 				</select>
 				<a target="_blank" rel="noopener noreferrer" class="fab fa-facebook-f" href="https://www.facebook.com/Chinmayamissionchicago/"></a>
-				<a class="fab fa-twitter" href="javascript: void(0);"></a>
+				@*<a class="fab fa-twitter" href="javascript: void(0);"></a>
 				<a class="fab fa-google-plus-g" href="javascript: void(0);"></a>
 				<a class="fab fa-linkedin-in" href="javascript: void(0);"></a>
-				<a class="fas fa-plus" href="javascript: void(0);"></a>
+				<a class="fas fa-plus" href="javascript: void(0);"></a>*@
 			</div>
 		</div>
 		@if (Session["Menu"] == null)
@@ -35,8 +35,8 @@
 			<div class="menu-list">
 				<ul class="menu-content collapse out classes-list" id="menu-content">
 					<li><a target="_blank" rel="noopener noreferrer" href="http://mychinmaya.org/balavihar/"> <i class="material-icons arrow">keyboard_arrow_right</i>About Balavihar Classes </a></li>
-					<li><a href="javascript: void(0);"> <i class="material-icons arrow">keyboard_arrow_right</i>Link 2 </a></li>
-					<li><a href="javascript: void(0);"> <i class="material-icons arrow">keyboard_arrow_right</i>Link 3 </a></li>
+					@*<li><a href="javascript: void(0);"> <i class="material-icons arrow">keyboard_arrow_right</i>Link 2 </a></li>
+					<li><a href="javascript: void(0);"> <i class="material-icons arrow">keyboard_arrow_right</i>Link 3 </a></li>*@
 				</ul>
 			</div>
 		</div>
