--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ForgotPassword.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ForgotPassword.cshtml
@@ -23,6 +23,9 @@
 </div>
 <script type="text/javascript">
 	function OnSuccess(response) {
+		toastr.options = {
+			positionClass: 'toast-top-center'
+		};
 		if (typeof (response.Message) !== 'undefined') {
 		    if (response.IsSuccess) {
 		        toastr.success(response.Message, "Forgot Password", { timeOut: 3000 });
