--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/UserActivation.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/UserActivation.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="row col-lg-12">
-    @Model.Message &nbsp; @Html.ActionLink("Click here", "Login", "Account") to login to your account.
+	@Model.Message &nbsp; @Html.ActionLink("Click here", "Login", "Account") &nbsp; to login to your account.
 </div>
 
