--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_Layout.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_Layout.cshtml
@@ -18,10 +18,10 @@
 					<option>Our Other Sites</option>
 				</select>
 				<a target="_blank" rel="noopener noreferrer" class="fab fa-facebook-f" href="https://www.facebook.com/Chinmayamissionchicago/"></a>
-				<a class="fab fa-twitter" href="javascript: void(0);"></a>
+				@*<a class="fab fa-twitter" href="javascript: void(0);"></a>
 				<a class="fab fa-google-plus-g" href="javascript: void(0);"></a>
 				<a class="fab fa-linkedin-in" href="javascript: void(0);"></a>
-				<a class="fas fa-plus" href="javascript: void(0);"></a>
+				<a class="fas fa-plus" href="javascript: void(0);"></a>*@
 			</div>
 		</div>
 		@if (Session["Menu"] == null)
